<resources>
    <string name="app_name">Course Controller</string>
    <string name="action_settings">Settings</string>
    <string name="no_gps_no_app">No GPS no App</string>
    <string name="alredy_permited">Permission already granted</string>
    <string name="nedds_permition">Needs Permission</string>
    <string name="no_arguments_to_search">No arguments to search</string>
    <string name="Grant_GPS_Permission">Grant GPS Permission</string>
    <string name="Enable_GPS">Enable GPS</string>
    <string name="Turn_off_GPS">Turn off GPS</string>
    <string name="Start_Route">Start Route</string>
    <string name="Stop_Route">Stop Route</string>
    <string name="Travelled_distance">Travelled distance</string>
    <string name="Time_traveled">Time traveled</string>
    <string name="What_do_you_want_to_find">What do you want to find?</string>
</resources>
