<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="0"
        android:layout_column="0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/permissaoGPSButton"
            android:layout_width="match_parent"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_gravity="bottom"
            android:text="@string/Grant_GPS_Permission"></androidx.appcompat.widget.AppCompatButton>

        <Button
            android:text="@string/Enable_GPS"
            android:id="@+id/ativaGPSButton"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1">
        </Button>

        <Button
            android:text="@string/Turn_off_GPS"
            android:id="@+id/desativarGPSButton"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1">
        </Button>

        <Button
            android:text="@string/Start_Route"
            android:id="@+id/iniciarButton"
            android:layout_columnSpan="1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1">
        </Button>

        <Button
            android:text="@string/Stop_Route"
            android:id="@+id/finalizarButton"
            android:layout_columnSpan="1"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1">
        </Button>
    </GridLayout>


    <GridLayout
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="1"
        android:layout_column="0">
        <TextView
            android:id="@+id/labelDistanciaTextView"
            android:layout_columnSpan="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:text="@string/Travelled_distance"
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_rowWeight="1"
            android:layout_gravity="bottom">
        </TextView>

        <TextView
            android:id="@+id/distanciaTextView"
            android:layout_columnSpan="1"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:text="0km 0m"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="bottom">
        </TextView>

        <TextView
            android:id="@+id/labelTempoTextView"
            android:layout_columnSpan="1"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:text="@string/Time_traveled"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="top"
            android:layout_rowWeight="1">
        </TextView>

        <Chronometer
            android:id="@+id/tempoChronometer"
            android:layout_columnSpan="1"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_rowWeight="1"
            android:layout_gravity="top">
        </Chronometer>
    </GridLayout>


    <GridLayout
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="0">
        <EditText
            android:id="@+id/buscaEdit"
            android:layout_columnSpan="1"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_columnWeight="2"
            android:hint="@string/What_do_you_want_to_find"
            android:layout_gravity="top">
        </EditText>

        <ImageButton
            android:id="@+id/buscaButtom"
            android:layout_columnSpan="1"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_search_black_24dp"
            android:layout_gravity="top"
            >
        </ImageButton>

    </GridLayout>

</GridLayout>